public interface IDrawing
{
    public void draw();
}