using System;
using System.Collections;
public interface IShuffling
{
    public void Shuffle();
    public IEnumerator CheckValueCoroutine();
}
