using System.Collections.Generic;

public interface IDealing
{
    public List<List<Card>> deal();
}