using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public interface IEnd_game
{
    public void end_game();
}
