public interface IEnd_turn
{
    public void end_tunr();
}